@@ -1,3 +1,8 @@
+2007-06-21  Paul Emsley  <emsley@localhost>
+
+	* db-main/db-main.cc (clear_results): clear the output fragment
+	too.
+
 2007-06-18  Paul Emsley  <emsley@localhost>
 
 	* src/c-interface.cc: Add action view - as a direct view.  But,
